// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg hVCEwm"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg hVCEwm"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg hVCEwm"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gJVJmv czgVew sc-edvVIM jPpNsz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fxDGbE iEnalz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg hVCEwm"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      hey
       
      <span
        class="sc-gJVJmv czgVew sc-edvVIM jPpNsz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fxDGbE iEnalz"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gJVJmv czgVew sc-edvVIM jPpNsz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fxDGbE iEnalz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg hVCEwm"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      hey
       
      <span
        class="sc-gJVJmv czgVew sc-edvVIM jPpNsz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fxDGbE iEnalz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg hVCEwm"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      <span
        class="sc-gJVJmv czgVew sc-edvVIM jPpNsz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fxDGbE iEnalz"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg hVCEwm"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gJVJmv czgVew sc-edvVIM jPpNsz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fxDGbE iEnalz"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-tYtIg kwFpMV"
    role="document"
  >
    <div
      class="sc-csnpUd kEFzEs sc-jKLfHm fqXavo"
      tabindex="0"
    >
      <span
        class="sc-bUkNyH eimBLo"
      >
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iWyXrV gJQEpB"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gJVJmv czgVew sc-bRBteW cUWkSM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-fxDGbE iEnalz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iWyXrV gJQEpB"
    >
      : 
    </i>
    <span
      class="sc-jvDgNt bGSTzd"
    >
      Hey
       
      <span
        class="sc-gJVJmv czgVew sc-edvVIM jPpNsz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-fxDGbE iEnalz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
